--- a/Server01/web/test/button.html
+++ b/Server01/web/test/button.html
@@ -20,6 +20,7 @@
     <title>Visit Local Server</title>
 </head>
 <body>
+	<img src="res/wallpaper.png" width="100px" height="100px">
     <h1>Visit Local Server Example</h1>
     <button onclick="visitServer()">Visit Server</button>
 
