--- a/Server01/web/login/login.html
+++ b/Server01/web/login/login.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="login.css">
+    <link rel="stylesheet" type="text/css" href="../login/login.css">
     <title>Document</title>
 </head>
 <body>
     <form aution="" class="login"> <!-- aution还没写？？？？？ -->
         <p>登录</p>
-        <input type="text" placeholder="用户名" id="username">
-        <input type="password" placeholder="密码" id="password">
-        <input type="submit" class="btn" value="登 录"> <!-- 为什么不用button？？？？？ -->
+        <input type="text" placeholder="用户名" id="userName">
+        <input type="password" placeholder="密码" id="passWord">
+        <input type="submit" id="myButton" class="btn" value="登 录"> <!-- 为什么不用button？？？？？ -->
     </form>
+    <script src="../login/login.js"></script>  <!-- 放在最后body标记之前，那样会加载更快并避免阻塞渲染页面。 -->
 </body>
-
-
-
-
 </html>
