--- a/Server01/web/error/error.html
+++ b/Server01/web/error/error.html
@@ -13,9 +13,10 @@
             <p>Sorry,the page your're looking for doesn't exist.if you think somethings is broken,
             report a problem</p>
             <div class="btns">
-                <a href="#">return home</a>
+                <a id = "btna" href="#">return home</a>
             </div>
         </div>
     </div>
+    <script src="../error/error.js"></script> 
 </body>
 </html>
