--- a/Server01/web/index/index.html
+++ b/Server01/web/index/index.html
@@ -116,8 +116,8 @@
         </div>
 
         <div id="box2">
-            wrew
-    
+            <!-- wrew -->
+            <img src = "../index/res/testimg1.bmp">
         </div>
 
         <div id="box3">
@@ -125,9 +125,9 @@
                 <h2>Task Queue</h2>
             </div>
             
-            <div>
+            <!-- <div>
                 sdfdsf
-            </div>
+            </div> -->
 
         </div>
 
