--- a/Server01/web/index/index.html
+++ b/Server01/web/index/index.html
@@ -112,7 +112,15 @@
         </div>
 
         <div id="box1">
-            <img id="run" src="../index/res/run.png" />
+            <!-- <img id="run" src="../index/res/run.png" /> -->
+
+            <ul>
+                <li><img id = "btn_run" title="运行" src="../index/res/run.png"></li>
+                <li><img id = "btn_reset" title="重启" src="../index/res/reset.png"></li>
+                <li><img id = "btn_exchange" title="交换" src="../index/res/exchange.png"></li>
+                <li><img id = "btn_add" title="添加" src="../index/res/add.png"></li>
+                <li><img id = "btn_downLoad" title="下载" src="../index/res/downLoad.png"></li>
+            </ul>
         </div>
 
         <div id="box2">
